<resources>
    <string name="app_name">Uber</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!--Strings related to Login activity-->
    <string name="login_signup_button"><u>create an account</u></string>
    <string name="login_signin_button">sign in</string>
    <string name="login_email_address">email address</string>
    <string name="login_password">password</string>

    <!--Strings related to Signup activity-->
    <string name="signup_signup_menu">Create an Account</string>
    <string name="signup_retype_password">retype password</string>
    <string name="signup_firstname">your first name</string>
    <string name="signup_lastname">your last name</string>
    <string name="signup_phone_number">phone number</string>
    <string name="signup_signup_button">sign up</string>

    <!--Strings related to Main activity-->
    <string name="main_hint_search_destination">Where to?</string>

    <!--Strings related to Edit Profile activity-->
    <string name="edit_profile_menu">Edit Account</string>
    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_last_name">Last name</string>
    <string name="edit_profile_email">Email Address</string>
    <string name="edit_profile_save">save</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
